syntax = "proto3";
package proto;

option go_package = "./proto";

import "common.proto";
import "apl.proto";
import "druid.proto";
import "hunter.proto";
import "mage.proto";
import "paladin.proto";
import "priest.proto";
import "rogue.proto";
import "shaman.proto";
import "warlock.proto";
import "warrior.proto";

// NextIndex: 49
message Player {
	// Label used for logging.
	string name = 1;

	Race race = 2;
	int32 level = 3;
	Class class = 4;

	EquipmentSpec equipment = 5;
	Consumes consumes = 6;
	UnitStats bonus_stats = 7;

	bool enable_item_swap = 46;
	ItemSwap item_swap = 45;

	IndividualBuffs buffs = 8;

	// Talents in wowhead format, e.g. '01102123133-12312312-'
	string talents_string = 9;
	Profession profession1 = 10;
	Profession profession2 = 11;
	Cooldowns cooldowns = 12;

	APLRotation rotation = 13;

	// TODO: Move most of the remaining fields into a 'MiscellaneousPlayerOptions' message.
	// This will remove a lot of the boilerplate code in the UI for each new field.

	int32 reaction_time_ms = 14;
	int32 channel_clip_delay_ms = 15;
	bool in_front_of_target = 16;
	double distance_from_target = 17;

	// ISB Info
	bool isb_using_shadowflame = 47;
	double isb_sb_frequency = 41;
	double isb_crit = 42;
	int32 isb_warlocks = 43;
	int32 isb_spriests = 44;

	// Items/enchants/etc to include in the database.
	SimDatabase database = 18;
	HealingModel healing_model = 19;

	oneof spec {
		BalanceDruid balance_druid = 20;
		FeralDruid feral_druid = 21;
		FeralTankDruid feral_tank_druid = 22;
		RestorationDruid restoration_druid = 23;
		Hunter hunter = 24;
		Mage mage = 25;
		RetributionPaladin retribution_paladin = 26;
		ProtectionPaladin protection_paladin = 27;
		HolyPaladin holy_paladin = 28;
		HealingPriest healing_priest = 29;
		ShadowPriest shadow_priest = 30;
		Rogue rogue = 32;
		TankRogue tank_rogue = 40;
		ElementalShaman elemental_shaman = 33;
		EnhancementShaman enhancement_shaman = 34;
		RestorationShaman restoration_shaman = 35;
		WardenShaman warden_shaman = 48;
		Warlock warlock = 36;
		TankWarlock tank_warlock = 39;
		Warrior warrior = 37;
		TankWarrior tank_warrior = 38;
	}
}

message Party {
	repeated Player players = 1;

	PartyBuffs buffs = 2;
}

message Raid {
	repeated Party parties = 1; 

	// The number of parties in the raid who participate in the sim, e.g.
	// 10-man vs 25-man raids. The remaining parties are unused but can hold
	// bench players.
	//
	// If this value is 0, all parties are included.
	int32 num_active_parties = 2;

	RaidBuffs buffs = 7;

	// Extra debuffs provided by buff bots in this raid.
	// This is also used for debuffs in the individual sims.
	Debuffs debuffs = 5;

	// Players who will be tanking mobs.
	repeated UnitReference tanks = 4;

	// Staggers Stormstrike casts across Enhance Shaman to maximize charge usage.
	bool stagger_stormstrikes = 3;

	// Extra fake players to add. Currently only used by healing sims.
	int32 target_dummies = 6;
}

message SimOptions {
	int32 iterations = 1;
	int64 random_seed = 2;
	bool debug = 3; // Enables debug logging.
	bool debug_first_iteration = 6;
	bool is_test = 5; // Only used internally.
	bool save_all_values = 7; // Only used internally.
	bool interactive = 8; // Enables interactive mode.
}

// The aggregated results from all uses of a particular action.
message ActionMetrics {
	ActionID id = 1;

	// True if a melee action, false if a spell action.
	bool is_melee = 2;

	// Metrics for this action for each target.
	// Note that some spells are untargeted, these will always have a single
	// element in this array.
	repeated TargetedActionMetrics targets = 3;

	int32 spell_school = 4;

	// True if action is applied/cast as a result of another action
	bool is_passive = 5;
}

// Metrics for a specific action, when cast at a particular target.  Next = 37
message TargetedActionMetrics {
	reserved 19, 20;
	reserved "crit_block_damage", "crit_blocks";

	// Raid/Target Index of the unit these metrics are targeted at.
	int32 unit_index = 12;

	// # of times this action was used by the agent.
	int32 casts = 1;

	// # of times this action hit a target. For cleave spells this can be larger than casts.
	int32 hits = 2;

	// # of times this action resisted hit a target.
	int32 resisted_hits = 25;

	// # of times this action was a critical strike.
	int32 crits = 3;

	// # of times this action resisted crit a target.
	int32 resisted_crits = 26;

	// # of times this action ticked on a target.
	int32 ticks = 21;

	// # of times this action resisted ticked a target.
	int32 resisted_ticks = 27;

	// # of times this action was a critical tick on a target.
	int32 crit_ticks = 22;

	// # of times this action was a resisted tick on a target.
	int32 resisted_crit_ticks = 28;

	// # of times this action was a Miss or Resist.
	int32 misses = 4;

	// # of times this action was a Dodge.
	int32 dodges = 5;

	// # of times this action was a Parry.
	int32 parries = 6;

	// # of times this action was a Block.
	int32 blocks = 7;

	// # of times this action was a Blocked critical strike.
	int32 blocked_crits = 33;

	// # of times this action was a Crush.
	int32 crushes = 35;

	// # of times this action was a Glance.
	int32 glances = 8;

	// Total damage done to this target by this action.
	double damage = 9;

	// Total resisted damage done to this target by this action.
	double resisted_damage = 29;

	// Total critical damage done to this target by this action.
	double crit_damage = 15;

	// Total resisted critical damage done to this target by this action.
	double resisted_crit_damage = 30;

	// Total tick damage done to this target by this action.
	double tick_damage = 23;

	// Total resisted tick damage done to this target by this action.
	double resisted_tick_damage = 31;

	// Total critical tick damage done to this target by this action.
	double crit_tick_damage = 24;

	// Total resisted critical tick damage done to this target by this action.
	double resisted_crit_tick_damage = 32;

	// Total glancing damage done to this target by this action.
	double glance_damage = 17;

	// Total crushing damage done to this target by this action.
	double crush_damage = 36;

	// Total block damage done to this target by this action.
	double block_damage = 18;

	// Total blocked critical strike damage done to this target by this action.
	double blocked_crit_damage = 34;

	// Total threat done to this target by this action.
	double threat = 10;

	// Total healing done to this target by this action.
	double healing = 11;

	// Total critical healing done to this target by this action.
	double crit_healing = 16;

	// Total shielding done to this target by this action.
	double shielding = 13;

	// Total time spent casting this action, in milliseconds, either from hard casts, GCD, or channeling.
	double cast_time_ms = 14;
}

message AuraMetrics {
	ActionID id = 1;

	double uptime_seconds_avg = 2;
	double uptime_seconds_stdev = 3;

	double procs_avg = 4;
}

enum ResourceType {
	ResourceTypeNone = 0;
	ResourceTypeMana = 1;
	ResourceTypeEnergy = 2;
	ResourceTypeRage = 3;
	ResourceTypeComboPoints = 4;
	ResourceTypeFocus = 5;
	ResourceTypeHealth = 6;
}

message ResourceMetrics {
	ActionID id = 1;

	ResourceType type = 2;

	// # of times this action was used by the agent.
	int32 events = 3;

	// Total resource gain from this action. Will be negative for spend actions.
	double gain = 4;

	// Like gain, but doesn't include gains over resource cap.
	double actual_gain = 5;
}

message DistributionMetrics {
	double avg     = 1;
	double stdev   = 2;
	double max     = 3;
	int64 max_seed = 5;
	double min     = 6;
	int64 min_seed = 7;
	map<int32, int32> hist = 4;
	repeated double all_values = 8;
}

// All the results for a single Unit (player, target, or pet).
message UnitMetrics {
	string name = 9;
	int32 unit_index = 13;

	DistributionMetrics dps = 1;
	DistributionMetrics dpasp = 16;
	DistributionMetrics threat = 8;
	DistributionMetrics dtps = 11;
	DistributionMetrics tmi = 17;
	DistributionMetrics hps = 14;
	DistributionMetrics tto = 15; // Time To OOM, in seconds.

	// average seconds spent oom per iteration
	double seconds_oom_avg = 3; 

	// Chance (0-1) representing probability of death. Used for tank sims.
	double chance_of_death = 12;

	repeated ActionMetrics actions = 5;
	repeated AuraMetrics auras = 6;
	repeated ResourceMetrics resources = 10;

	repeated UnitMetrics pets = 7;
}

// Results for a whole raid.
message PartyMetrics {
	DistributionMetrics dps = 1;
	DistributionMetrics hps = 3;

	repeated UnitMetrics players = 2;
}

// Results for a whole raid.
message RaidMetrics {
	DistributionMetrics dps = 1;
	DistributionMetrics hps = 3;

	repeated PartyMetrics parties = 2;
}

message EncounterMetrics {
	repeated UnitMetrics targets = 1;
}

// RPC RaidSim
message RaidSimRequest {
	Raid raid = 1;
	Encounter encounter = 2;
	SimOptions sim_options = 3;
}

// Result from running the raid sim.
message RaidSimResult {
	RaidMetrics raid_metrics = 1;
	EncounterMetrics encounter_metrics = 2;

	string logs = 3;

	// Needed for displaying the timeline properly when the duration +/- option
	// is used.
	double first_iteration_duration = 4;
	double avg_iteration_duration = 6;

	string error_result = 5;
}

// RPC ComputeStats
message ComputeStatsRequest {
	Raid raid = 1;
	Encounter encounter = 2;
}
message AuraStats {
	ActionID id = 1;
	int32 max_stacks = 2;
	bool has_icd = 3;
	bool has_exclusive_effect = 4;
}
message SpellStats {
	ActionID id = 1;

	bool is_castable = 2; // Whether this spell may be cast by the APL logic.
	bool is_channeled = 7; // Whether this spell is a channeled spell (Mind Flay, Drain Soul, etc).
	bool is_major_cooldown = 3; // Whether this spell is a major cooldown.
	bool has_dot = 4; // Whether this spell applies a DoT effect.
	bool has_shield = 6; // Whether this spell applies a shield effect.
	bool prepull_only = 5; // Whether this spell may only be cast during prepull.
	bool encounter_only = 8; // Whether this spell may only be cast during the encounter (not prepull).
}
message APLActionStats {
	repeated string warnings = 1;
}
message APLStats {
	repeated APLActionStats prepull_actions = 1;
	repeated APLActionStats priority_list = 2;
}
message UnitMetadata {
	string name = 3;
	repeated SpellStats spells = 1;
	repeated AuraStats auras = 2;
}
message PetStats {
	UnitMetadata metadata = 1;
}
message PlayerStats {
	// Stats
	UnitStats base_stats = 6;
	UnitStats gear_stats = 1;
	UnitStats talents_stats = 7;
	UnitStats buffs_stats = 8;
	UnitStats consumes_stats = 9;
	UnitStats final_stats = 2;

	repeated string sets = 3;
	IndividualBuffs buffs = 4;

	UnitMetadata metadata = 10;
	APLStats rotation_stats = 12;

	repeated PetStats pets = 11;
}
message PartyStats {
	repeated PlayerStats players = 1;
}
message RaidStats {
	repeated PartyStats parties = 1;
}
message TargetStats {
	UnitMetadata metadata = 1;
}
message EncounterStats {
	repeated TargetStats targets = 1;
}
message ComputeStatsResult {
	RaidStats raid_stats = 1;
	EncounterStats encounter_stats = 3;
	string error_result = 2;
}

// RPC StatWeights
message StatWeightsRequest {
	Player player = 1;
	RaidBuffs raid_buffs = 2;
	PartyBuffs party_buffs = 3;
	Debuffs debuffs = 9;
	Encounter encounter = 4;
	SimOptions sim_options = 5;
	repeated UnitReference tanks = 8;

	repeated Stat stats_to_weigh = 6;
	repeated PseudoStat pseudo_stats_to_weigh = 10;
	Stat ep_reference_stat = 7;
}
message StatWeightsResult {
	StatWeightValues dps = 1;
	StatWeightValues hps = 4;
	StatWeightValues tps = 2;
	StatWeightValues dtps = 3;
	StatWeightValues tmi = 5;
	StatWeightValues p_death = 6;
}
message StatWeightValues {
	UnitStats weights = 1;
	UnitStats weights_stdev = 2;
	UnitStats ep_values = 3;
	UnitStats ep_values_stdev = 4;
}

message AsyncAPIResult {
  string progress_id = 1;
} 

// ProgressMetrics are used by all async APIs
message ProgressMetrics {
	int32 completed_iterations = 1;
	int32 total_iterations = 2;
	int32 completed_sims = 3;
	int32 total_sims = 4;
	bool presim_running = 8;

	// Partial Results 
	double dps = 5;
	double hps = 9;

	// Final Results
	RaidSimResult final_raid_result = 6; // only set when completed
	StatWeightsResult final_weight_result = 7;
	BulkSimResult final_bulk_result = 10;
}

// RPC: BulkSim
message BulkSimRequest {
    RaidSimRequest base_settings = 1;
    BulkSettings bulk_settings = 2;
}

message TalentLoadout {
	string talents_string = 1;
	string name = 2;
}

message BulkSettings {
	repeated ItemSpec items = 1;
	bool combinations = 2;
	bool fast_mode = 3; // Used to run with less iterations to start and slowly increase to weed out items faster.
	// Use current enchant on the slot if not specified by the ItemSpec.
	// Only works when replacement item is valid target for enchant.
	bool auto_enchant = 4;

	// Copied from WOTLK but not removed so reserved instead
	reserved 5;
    reserved "auto_gem";
	reserved 6;
    reserved "default_red_gem";
	reserved 7;
    reserved "default_blue_gem";
	reserved 8;
    reserved "default_yellow_gem";
	reserved 9;
    reserved "default_meta_gem";
	reserved 10;
    reserved "ensure_meta_req_met";

	// Number of iterations per combo.
	// If set to 0 the sim core decides the optimal iterations.
	int32 iterations_per_combo = 11;
	// Should sim talents as well
	bool sim_talents = 12;
	repeated TalentLoadout talents_to_sim = 13;
}

message BulkSimResult {
    repeated BulkComboResult results = 1;
	BulkComboResult equipped_gear_result = 2;
    string error_result = 3; // only set if sim failed.
}

message BulkComboResult {
    repeated ItemSpecWithSlot items_added = 1;
    UnitMetrics unit_metrics = 2;
	TalentLoadout talent_loadout = 3;
}

message ItemSpecWithSlot {
    ItemSpec item = 1;
    ItemSlot slot = 2;
}
